force-app/main/default/objects/VCC_Case_Share_Criteria__mdt/fields/Criteria_Field__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Field__c</fullName>
    <description>The field on the Case object that is being evaluated for this sharing event</description>
    <label>Criteria Field</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>