force-app/main/default/objects/VCC_Case_Share_Criteria__mdt/fields/Share_To__c.field-meta.xml
<CustomField>
    <fullName>Share_To__c</fullName>
    <description>This is the Name of the User or Public Group that the record should be shared to. For sharing to users related to the Case, use &quot;Owner&quot; or &quot;Created By&quot;</description>
    <label>Share To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>