force-app/main/default/objects/VCC_Case_Share_Criteria__mdt/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <description>The value present within the criteria field that would trigger this sharing event</description>
    <label>Target Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>